<?xml version="1.0" encoding="utf-8"?>
<!--
 * @date 30.08.2014
 * @author Armin Joachimsmeyer
 * armin.joachimsmeyer@gmail.com
 * @copyright GPL v3 (http://www.gnu.org/licenses/gpl.html)
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/general_preferences" >
        <ListPreference
            android:defaultValue="@string/default_loglevel_preference"
            android:dialogTitle="@string/dialog_title_loglevel_preference"
            android:entries="@array/entries_loglevel_preference"
            android:entryValues="@array/entryvalues_loglevel_preference"
            android:key="loglevel"
            android:summary="@string/summary_loglevel_preference"
            android:title="@string/title_loglevel_preference" />
        <ListPreference
            android:defaultValue="@string/default_screenorientation_preference"
            android:dialogTitle="@string/dialog_title_screenorientation_preference"
            android:entries="@array/entries_screenorientation_preference"
            android:entryValues="@array/entryvalues_screenorientation_preference"
            android:key="screenorientation"
            android:summary="@string/summary_screenorientation_preference"
            android:title="@string/title_screenorientation_preference" />
        <!-- SHOW TOUCH COORDINATES mode -->
        <CheckBoxPreference
            android:defaultValue="@string/default_value_show_touch_preference"
            android:key="show_touch_mode"
            android:summary="@string/summary_show_touch_preference"
            android:title="@string/title_show_touch_preference" />
        <!-- SECURE BT CONNECTION -->
        <CheckBoxPreference
            android:defaultValue="@string/default_value_allowinsecureconnections_preference"
            android:key="allowinsecureconnections"
            android:summary="@string/summary_allowinsecureconnections_preference"
            android:title="@string/title_allowinsecureconnections_preference" />
    </PreferenceCategory>

</PreferenceScreen>